--- a/colony_dashboard.qmd
+++ b/colony_dashboard.qmd
@@ -47,6 +47,8 @@ load_packages(pkg_list)
 # library(jmv) # performing statistical analyses
 
 #setwd(dirname(rstudioapi::getSourceEditorContext()$path))
+# To capture manifest.json
+#rsconnect::writeManifest
 
 # Calculate number of breeder cages
 breeder_cage_count <- read.csv("data/raw/raw_data.csv") %>%
